--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <body>
     <nav>
-      <div class="logo">Hallo Dear,</div>
+      <div class="logo">Welcome To My Web Parallax</div>
       <div class="nav-links">
         <ul>
           <li><img src="images/linkedin.png" alt="" /></li>
