--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="slide-detail">
               <p>
                 <span
-                  >Hello My Name is Eko Biyanto Putro
+                  Eko Biyanto Putro
                 </span>
               </p>
             </div>
@@ -74,13 +74,13 @@
                 <h5>KNOWN MOONS: <span style="opacity: 0.8">None</span></h5>
               </div>
             </div>
-			<img src="images/bdg.png">
+		<img src="images/bdg.png">
           </div>
 
           <!-- 02 -->
           <div class="swiper-slide">
             <div class="slide-number">
-              <p><span>Venus</span></p>
+              <p><span>Programing</span></p>
             </div>
             <div class="slide-text">
               <h4><span>02</span></h4>
