--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <!-- 02 -->
           <div class="swiper-slide">
             <div class="slide-number">
-              <p><span>Programing</span></p>
+              <p><span>SKILLS</span></p>
             </div>
             <div class="slide-text">
               <h4><span>02</span></h4>
