--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="slide-detail">
               <p>
                 <span
-                  Eko Biyanto Putro
+                  >Eko Biyanto Putro
                 </span>
               </p>
             </div>
