--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
               <div>
                 <h5>
                   Date & Birth : Bekasi 15 Januari 2000
-                  <span style="opacity: 0.8">87.97 Earth Days</span>
+                  <span style="opacity: 0.8">(+62) 8988161505</span>
                 </h5>
-                <h5>KNOWN MOONS: <span style="opacity: 0.8">None</span></h5>
+                <h5>KNOWN MOONS: <span style="opacity: 0.8">Libra</span></h5>
               </div>
             </div>
 		<img src="images/bdg.png">
