--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
       <div class="logo">Welcome To My Web Parallax</div>
       <div class="nav-links">
         <ul>
+	<a href="https://linkedln.com/biyantptr15">
           <li><img src="images/linkedin.png" alt="" /></li>
+	<a href="https://facebook.com/Biyanto Putro">
           <li><img src="images/facebook.png" alt="" /></li>
+	<a href="https://instagram.com/ekoojuw">
           <li><img src="images/instagram-logo.png" alt="" /></li>
         </ul>
       </div>
@@ -88,10 +91,11 @@
             <div class="slide-detail">
               <p>
                 <span
-                  >Venus is the second planet from the Sun and the
-                  sixth-largest. Together with Mercury, they are the only
-                  planets without a satellite, even though Mercury is closer to
-                  the sun, Venus is the hottest planet.
+                  >
+		- HTML/CSS
+		- MySQL
+		- JAVA
+		- Data Structures
                 </span>
               </p>
             </div>
@@ -99,9 +103,9 @@
               <div>
                 <h5>
                   ORBIT PERIOD:
-                  <span style="opacity: 0.8">224.70 Earth days</span>
+                  <span style="opacity: 0.8">Earth days</span>
                 </h5>
-                <h5>KNOWN MOONS: <span style="opacity: 0.8">None</span></h5>
+                <h5>KNOWN MOONS: <span style="opacity: 0.8"></span></h5>
               </div>
             </div>
             <div class="slide-img"></div>
