--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <!-- SLIDE ONE -->
           <div class="swiper-slide">
             <div class="slide-number">
-              <p><span>ABOUT</span></p>
+              <p><span>About Me</span></p>
             </div>
             <div class="slide-text">
               <h4><span></span></h4>
@@ -77,13 +77,13 @@
                 <h5>KNOWN MOONS: <span style="opacity: 0.8">Libra</span></h5>
               </div>
             </div>
-		<img src="images/bdg.png">
+		//<img src="images/bdg.png">
           </div>
 
           <!-- 02 -->
           <div class="swiper-slide">
             <div class="slide-number">
-              <p><span>SKILLS</span></p>
+              <p><span>Technical Skills</span></p>
             </div>
             <div class="slide-text">
               <h4><span>02</span></h4>
@@ -114,7 +114,7 @@
           <!-- 03 -->
           <div class="swiper-slide">
             <div class="slide-number">
-              <p><span>Earth</span></p>
+              <p><span>Soft Skills</span></p>
             </div>
             <div class="slide-text">
               <h4><span>03</span></h4>
@@ -122,9 +122,11 @@
             <div class="slide-detail">
               <p>
                 <span
-                  >Earth is the third planet from the Sun and the fifth largest
-                  planet in the Solar System with the highest density. It is
-                  currently the only known location where life is present.
+                  >
+		- collaboration
+		- problem solving
+		- empathy
+		- creativity
                 </span>
               </p>
             </div>
@@ -132,7 +134,7 @@
               <div>
                 <h5>
                   ORBIT PERIOD:
-                  <span style="opacity: 0.8">365.26 Earth days</span>
+                  <span style="opacity: 0.8">Earth days</span>
                 </h5>
                 <h5>KNOWN MOONS: <span style="opacity: 0.8">1</span></h5>
               </div>
@@ -199,99 +201,6 @@
             </div>
             <div class="slide-img"></div>
           </div>
-
-          <!-- 06 -->
-
-          <div class="swiper-slide">
-            <div class="slide-number">
-              <p><span>Saturn</span></p>
-            </div>
-            <div class="slide-text">
-              <h4><span>06</span></h4>
-            </div>
-            <div class="slide-detail">
-              <p>
-                <span
-                  >Saturn is the sixth planet from the Sun, with the largest
-                  planetary rings in the Solar System. It is the second-largest
-                  planet after Jupiter, and recently, with many other moons
-                  being discovered, it surpassed the number of Jupiter’s moons.
-                </span>
-              </p>
-            </div>
-            <div class="slide-detail-facts">
-              <div>
-                <h5>
-                  ORBIT PERIOD:
-                  <span style="opacity: 0.8">10,755.70 Earth days</span>
-                </h5>
-                <h5>KNOWN MOONS: <span style="opacity: 0.8">62</span></h5>
-              </div>
-            </div>
-            <div class="slide-img"></div>
-          </div>
-
-          <!-- 07 -->
-
-          <div class="swiper-slide">
-            <div class="slide-number">
-              <p><span>Uranus</span></p>
-            </div>
-            <div class="slide-text">
-              <h4><span>07</span></h4>
-            </div>
-            <div class="slide-detail">
-              <p>
-                <span
-                  >Uranus is the seventh planet discovered in the Solar System
-                  that also led to the discovery of the last planet, Neptune
-                  they are both referred to as ice giants.
-                </span>
-              </p>
-            </div>
-            <div class="slide-detail-facts">
-              <div>
-                <h5>
-                  ORBIT PERIOD:
-                  <span style="opacity: 0.8">30,687.15 Earth days</span>
-                </h5>
-                <h5>KNOWN MOONS: <span style="opacity: 0.8">27</span></h5>
-              </div>
-            </div>
-            <div class="slide-img"></div>
-          </div>
-
-          <!-- 08 -->
-
-          <div class="swiper-slide">
-            <div class="slide-number">
-              <p><span>Neptune</span></p>
-            </div>
-            <div class="slide-text">
-              <h4><span>08</span></h4>
-            </div>
-            <div class="slide-detail">
-              <p>
-                <span
-                  >Neptune is the fourth largest and the farthest planet of the
-                  Solar System with the most powerful wind speeds out of all the
-                  planets. It is the smallest of the gas giants.
-                </span>
-              </p>
-            </div>
-            <div class="slide-detail-facts">
-              <div>
-                <h5>
-                  ORBIT PERIOD:
-                  <span style="opacity: 0.8">60,190.03 Earth days</span>
-                </h5>
-                <h5>KNOWN MOONS: <span style="opacity: 0.8">14</span></h5>
-              </div>
-            </div>
-            <div class="slide-img"></div>
-          </div>
-        </div>
-      </div>
 
       <!-- SLIDER LINKS -->
       <div>
