--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
             </div>
             <div class="slide-detail">
               <p>
-                <span
-                  >Eko Biyanto Putro
+                <span>
+		<h2>Eko Biyanto Putro</h2>
                 </span>
               </p>
             </div>
