update.index.html

--- a/index.html
+++ b/index.html
@@ -62,11 +62,7 @@
               <h4><span></span></h4>
             </div>
             <div class="slide-detail">
-              <p>
-                <span>
-		<h2>Eko Biyanto Putro</h2>
-                </span>
-              </p>
+              <p><span>Eko Biyanto Putro</span>u</p>
             </div>
             <div class="slide-detail-facts">
               <div>
