update index bor

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               <h4><span></span></h4>
             </div>
             <div class="slide-detail">
-              <p><span>Eko Biyanto Putro</span>u</p>
+              <p><span>Eko Biyanto Putro</span></p>
             </div>
             <div class="slide-detail-facts">
               <div>
