--- a/index.html
+++ b/index.html
@@ -148,11 +148,8 @@
             </div>
             <div class="slide-detail">
               <p>
-                <span
-                  >Mars is the fourth planet from the Sun and the
-                  second-smallest planet with a thin atmosphere, having the
-                  surface features reminiscent both of the impact craters of the
-                  Moon, and the valleys, deserts and polar ice caps of Earth.
+                <span>
+		None
                 </span>
               </p>
             </div>
@@ -178,11 +175,8 @@
             </div>
             <div class="slide-detail">
               <p>
-                <span
-                  >Jupiter is the fifth planet from the Sun and the largest
-                  planet of the Solar System. It is the oldest planet of the
-                  Solar System thus it was the first to take shape out of the
-                  remains of the solar nebula.
+                <span>
+		None
                 </span>
               </p>
             </div>
